<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:padding="16dp"
    tools:context="com.example.obye.plan.PlanInputSport">

    <ImageView
        android:id="@+id/blocking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:maxWidth="40dp"
        android:maxHeight="40dp"
        android:src="@drawable/ic_back" />

    <EditText
        android:id="@+id/edit_file"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="395dp"
        android:layout_height="471dp"
        android:layout_below="@+id/header_linear"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="99dp"
        android:layout_marginEnd="0dp"
        android:background="@android:color/white"
        android:gravity="top|start"
        android:hint="@string/edit_file_hint"
        android:inputType="textMultiLine|textNoSuggestions"
        android:padding="8dp" />

    <LinearLayout
        android:id="@+id/header_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|start"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_new"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:textSize="15sp"
            android:padding="0dp"
            android:layout_marginTop="80dp"
            android:text="@string/file_new"
            android:background="@color/black"/>

        <Button
            android:id="@+id/button_open"
            android:background="@color/black"
            android:layout_width="160dp"
            android:layout_marginLeft="8dp"
            android:layout_height="50dp"
            android:layout_marginTop="80dp"
            android:textSize="15sp"
            android:padding="0dp"
            android:text="@string/file_open" />

        <Button
            android:id="@+id/button_save"
            android:background="@color/black"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="7dp"
            android:textSize="15sp"
            android:textAlignment="center"
            android:padding="0dp"
            android:text="@string/file_save" />

    </LinearLayout>

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="620dp"
        android:layout_height="50dp"
        android:layout_marginTop="150dp"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName|textNoSuggestions"
        android:padding="@dimen/tiny_margin" />

</RelativeLayout>