<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/layout_width"
    android:layout_height="@dimen/layout_height"
    tools:context=".Stories.StoriesCrystalActivity"
    android:background="@color/bgrec">

    <ImageView
        android:id="@+id/recdrinkud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="40dp"
        android:maxHeight="40dp"
        android:src="@drawable/recdrink"
        tools:context=".recommendation.TRecDrinkUnderweight" />

    <ImageView
        android:id="@+id/backrecdrinkud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:maxWidth="40dp"
        android:maxHeight="40dp"
        android:src="@drawable/ic_back" />

    <TextView
        android:id="@+id/titledrinkudText"
        android:layout_width="383dp"
        android:layout_height="65dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="290dp"
        android:fontFamily="@font/plus_jakarta_sans_bold"
        android:text="@string/underweight"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/recdrinkudText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="340dp"
        android:fontFamily="@font/plus_jakarta_sans_bold"
        android:text="@string/recdrinktext"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/drinkuddescText"
        android:layout_width="354dp"
        android:layout_height="458dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="370dp"
        android:fontFamily="@font/plus_jakarta_sans_bold"
        android:text="@string/descdrinkud"
        android:textColor="@color/black"
        android:textSize="14sp" />

</RelativeLayout>